<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.3">
  <GVL Name="GVL_Devices" Id="{49019085-0c45-46f1-a256-56d701fd306c}">
    <Declaration><![CDATA[VAR_GLOBAL
	
{attribute 'pytmc' :=' pv: EM2K0:XGMD:OVERRIDE_INJ '}
	xOverrideMode : BOOL:= false;
	
	{attribute 'pytmc' :=' pv: EM2K0:XGMD:GHC:50 '}
	GHC_50 : FB_ITR90;	
	
	{attribute 'pytmc' :=' pv: EM2K0:XGMD:VCN:50 '}
	VCN_50 : FB_VCN;
	{attribute 'pytmc' :=' pv: EM2K0:XGMD:VGP:50 '}
	VGP_50 : FB_VGP;

	{attribute 'pytmc' :=' pv: EM2K0:XGMD:GCM:80 '}
	GCM_80 : FB_GCM;

	{attribute 'pytmc' :=' pv: EM2K0:XGMD:VVC:80 '}
	VVC_80:FB_VVC;
	{attribute 'pytmc' :=' pv: EM2K0:XGMD:VVC:81 '}
	VVC_81:FB_VVC;
	{attribute 'pytmc' :=' pv: EM2K0:XGMD:VVC:82 '}
	VVC_82:FB_VVC;
	{attribute 'pytmc' :=' pv: EM2K0:XGMD:VVC:83 '}
	VVC_83 : FB_VVC;
	{attribute 'pytmc' :=' pv: EM2K0:XGMD:VVC:84 '}
	VVC_84 : FB_VVC;
	{attribute 'pytmc' :=' pv: EM2K0:XGMD:VVC:85 '}
	VVC_85 : FB_VVC;
	{attribute 'pytmc' :=' pv: EM2K0:XGMD:VVC:86 '}
	VVC_86 : FB_VVC;
	
	
	
	
	(*HV*)
	{attribute 'pytmc' :=' pv: EM2K0:XGEM:HV:1 '}
	hv1 : FB_HighVoltage;
	{attribute 'pytmc' :=' pv: EM2K0:XGEM:HV:2 '}	
	hv2 : FB_HighVoltage;
	
	(*RTD*)
	
	{attribute 'pytmc' :=' pv: EM2K0:XGMD:RTD:1 '}
	{attribute 'TcLinkTo' := '.iRaw := TIIB[EL3202_03_08]^RTD Inputs Channel 1^Value;
                              .bError := TIIB[EL3202_03_08]^RTD Inputs Channel 1^Status^Error;
                              .bUnderrange := TIIB[EL3202_03_08]^RTD Inputs Channel 1^Status^Underrange;
                              .bOverrange := TIIB[EL3202_03_08]^RTD Inputs Channel 1^Status^Overrange'}
	RTD_1 : FB_TempSensor;
	
	{attribute 'pytmc' :=' pv: EM2K0:XGMD:RTD:2 '}
	{attribute 'TcLinkTo' := '.iRaw := TIIB[EL3202_03_08]^RTD Inputs Channel 2^Value;
                              .bError := TIIB[EL3202_03_08]^RTD Inputs Channel 2^Status^Error;
                              .bUnderrange := TIIB[EL3202_03_08]^RTD Inputs Channel 2^Status^Underrange;
                              .bOverrange := TIIB[EL3202_03_08]^RTD Inputs Channel 2^Status^Overrange'}
	RTD_2 : FB_TempSensor;
	
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>